Added Razorpay and Email

--- a/mulitplex-service/src/main/resources/application.properties
+++ b/mulitplex-service/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.output.ansi.enabled=always
 server.port=3080
 spring.application.name = multiplex-service
+rzp_key_id = rzp_test_RYaOC10U6IjI9N
+rzp_key_secret = 1FrgQAzBOwh2fyd0v7dVmoPS
+rzp_currency = INR
+rzp_company_name = MyCompany
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bahubalicantlive@gmail.com
+spring.mail.password=hpogdeygcwiibhak
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
