--- a/mulitplex-service/pom.xml
+++ b/mulitplex-service/pom.xml
@@ -40,7 +40,10 @@
 			<artifactId>razorpay-java</artifactId>
 			<version>1.4.3</version>
 		 </dependency>
-		 
+		 <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-mail</artifactId>
