--- a/mulitplex-service/src/main/resources/application.properties
+++ b/mulitplex-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.username=bahubalicantlive@gmail.com
 spring.mail.password=hpogdeygcwiibhak
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost 
