--- a/view-controller/src/main/resources/application.properties
+++ b/view-controller/src/main/resources/application.properties
@@ -8,4 +8,5 @@ server.port=8080
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.application.name = view-controller
-logging.level.root=warn
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+eureka.instance.hostname=localhost 
