--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 eureka.client.register-with-eureka = false
 eureka.client.fetch-registry = false
 spring.output.ansi.enabled=always
-server.port=8761
+server.port=${SERVER_PORT:8761}
 eureka.instance.prefer-ip-address=true
