--- a/multiplex-jdbc/src/main/resources/application.properties
+++ b/multiplex-jdbc/src/main/resources/application.properties
@@ -1,21 +1,20 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/multiplex
-spring.datasource.username=root
-spring.datasource.password=Admin@123Admin@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:multiplex}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:Admin@123Admin@123}
 spring.jpa.hibernate.ddl-auto=update
 spring.output.ansi.enabled=always
-server.port=4080
+server.port=${SERVER_PORT:4080}
 spring.application.name = multiplex-service
-rzp_key_id = rzp_test_RYaOC10U6IjI9N
-rzp_key_secret = 1FrgQAzBOwh2fyd0v7dVmoPS
+rzp_key_id = ${RZP_KEY_ID:rzp_test_RYaOC10U6IjI9N}
+rzp_key_secret = ${RZP_KEY_SECRET:1FrgQAzBOwh2fyd0v7dVmoPS}
 rzp_currency = INR
 rzp_company_name = MyCompany
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bahubalicantlive@gmail.com
-spring.mail.password=hpogdeygcwiibhak
+spring.mail.username=${SPRING_MAIL_USERNAME:bahubalicantlive@gmail.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD:hpogdeygcwiibhak}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+eureka.client.service-url.defaultZone = http://${EUREKA_HOST: localhost}:8761/eureka
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost 
+eureka.instance.hostname=${EUREKA_HOST: localhost}
