--- a/view-controller/src/main/resources/application.properties
+++ b/view-controller/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/multiplex
-spring.datasource.username=root
-spring.datasource.password=Admin@123Admin@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:multiplex}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:Admin@123Admin@123}
 spring.jpa.hibernate.ddl-auto=update
 spring.output.ansi.enabled=always
-server.port=8080
+server.port=${SERVER_PORT:8080}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.application.name = view-controller
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
-eureka.instance.hostname=localhost 
+eureka.client.service-url.defaultZone = http://${EUREKA_HOST: localhost}:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=${EUREKA_HOST: localhost}
